fix some elements positions and text alignment

--- a/css/ar.css
+++ b/css/ar.css
@@ -1,5 +1,6 @@
 body {
     direction: rtl;
+    text-align: right;
 }
 
 .contact {
